// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation0 MuiStepper-root MuiStepper-horizontal"
    >
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 1
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight-root StepConnector-connectorIcon"
        viewBox="0 0 7 13"
      >
        <path
          d="M7 6.5a.43.43 0 0 1-.12.3l-5.604 6.07a.367.367 0 0 1-.277.13.367.367 0 0 1-.277-.13l-.601-.652a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3L4.848 6.5.12 1.381a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3l.602-.65A.368.368 0 0 1 .999 0c.104 0 .196.044.277.13L6.879 6.2A.43.43 0 0 1 7 6.5z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 2
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight-root StepConnector-connectorIcon"
        viewBox="0 0 7 13"
      >
        <path
          d="M7 6.5a.43.43 0 0 1-.12.3l-5.604 6.07a.367.367 0 0 1-.277.13.367.367 0 0 1-.277-.13l-.601-.652a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3L4.848 6.5.12 1.381a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3l.602-.65A.368.368 0 0 1 .999 0c.104 0 .196.044.277.13L6.879 6.2A.43.43 0 0 1 7 6.5z"
        />
      </svg>
      <div
        class="MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-active"
            />
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label MuiStepLabel-active"
            >
              <span
                class="StepLabel-label"
              >
                Step 3
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight-root StepConnector-connectorIcon"
        viewBox="0 0 7 13"
      >
        <path
          d="M7 6.5a.43.43 0 0 1-.12.3l-5.604 6.07a.367.367 0 0 1-.277.13.367.367 0 0 1-.277-.13l-.601-.652a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3L4.848 6.5.12 1.381a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3l.602-.65A.368.368 0 0 1 .999 0c.104 0 .196.044.277.13L6.879 6.2A.43.43 0 0 1 7 6.5z"
        />
      </svg>
      <div
        class="MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root"
            />
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label"
            >
              <span
                class="StepLabel-label"
              >
                Step 4
              </span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper render with all steps completed 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation0 MuiStepper-root MuiStepper-horizontal"
    >
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 1
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight-root StepConnector-connectorIcon"
        viewBox="0 0 7 13"
      >
        <path
          d="M7 6.5a.43.43 0 0 1-.12.3l-5.604 6.07a.367.367 0 0 1-.277.13.367.367 0 0 1-.277-.13l-.601-.652a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3L4.848 6.5.12 1.381a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3l.602-.65A.368.368 0 0 1 .999 0c.104 0 .196.044.277.13L6.879 6.2A.43.43 0 0 1 7 6.5z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 2
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight-root StepConnector-connectorIcon"
        viewBox="0 0 7 13"
      >
        <path
          d="M7 6.5a.43.43 0 0 1-.12.3l-5.604 6.07a.367.367 0 0 1-.277.13.367.367 0 0 1-.277-.13l-.601-.652a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3L4.848 6.5.12 1.381a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3l.602-.65A.368.368 0 0 1 .999 0c.104 0 .196.044.277.13L6.879 6.2A.43.43 0 0 1 7 6.5z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 3
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight-root StepConnector-connectorIcon"
        viewBox="0 0 7 13"
      >
        <path
          d="M7 6.5a.43.43 0 0 1-.12.3l-5.604 6.07a.367.367 0 0 1-.277.13.367.367 0 0 1-.277-.13l-.601-.652a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3L4.848 6.5.12 1.381a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3l.602-.65A.368.368 0 0 1 .999 0c.104 0 .196.044.277.13L6.879 6.2A.43.43 0 0 1 7 6.5z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 4
              </span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper render with full-width 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation0 MuiStepper-root MuiStepper-horizontal Stepper-fullWidth"
    >
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 1
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight-root StepConnector-connectorIcon"
        viewBox="0 0 7 13"
      >
        <path
          d="M7 6.5a.43.43 0 0 1-.12.3l-5.604 6.07a.367.367 0 0 1-.277.13.367.367 0 0 1-.277-.13l-.601-.652a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3L4.848 6.5.12 1.381a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3l.602-.65A.368.368 0 0 1 .999 0c.104 0 .196.044.277.13L6.879 6.2A.43.43 0 0 1 7 6.5z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 2
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight-root StepConnector-connectorIcon"
        viewBox="0 0 7 13"
      >
        <path
          d="M7 6.5a.43.43 0 0 1-.12.3l-5.604 6.07a.367.367 0 0 1-.277.13.367.367 0 0 1-.277-.13l-.601-.652a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3L4.848 6.5.12 1.381a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3l.602-.65A.368.368 0 0 1 .999 0c.104 0 .196.044.277.13L6.879 6.2A.43.43 0 0 1 7 6.5z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 3
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight-root StepConnector-connectorIcon"
        viewBox="0 0 7 13"
      >
        <path
          d="M7 6.5a.43.43 0 0 1-.12.3l-5.604 6.07a.367.367 0 0 1-.277.13.367.367 0 0 1-.277-.13l-.601-.652a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3L4.848 6.5.12 1.381a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3l.602-.65A.368.368 0 0 1 .999 0c.104 0 .196.044.277.13L6.879 6.2A.43.43 0 0 1 7 6.5z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 4
              </span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper render with hidden labels 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation0 MuiStepper-root MuiStepper-horizontal"
    >
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label StepLabel-hidden MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 1
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight-root StepConnector-connectorIcon"
        viewBox="0 0 7 13"
      >
        <path
          d="M7 6.5a.43.43 0 0 1-.12.3l-5.604 6.07a.367.367 0 0 1-.277.13.367.367 0 0 1-.277-.13l-.601-.652a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3L4.848 6.5.12 1.381a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3l.602-.65A.368.368 0 0 1 .999 0c.104 0 .196.044.277.13L6.879 6.2A.43.43 0 0 1 7 6.5z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label StepLabel-hidden MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 2
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight-root StepConnector-connectorIcon"
        viewBox="0 0 7 13"
      >
        <path
          d="M7 6.5a.43.43 0 0 1-.12.3l-5.604 6.07a.367.367 0 0 1-.277.13.367.367 0 0 1-.277-.13l-.601-.652a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3L4.848 6.5.12 1.381a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3l.602-.65A.368.368 0 0 1 .999 0c.104 0 .196.044.277.13L6.879 6.2A.43.43 0 0 1 7 6.5z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label StepLabel-hidden MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 3
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight-root StepConnector-connectorIcon"
        viewBox="0 0 7 13"
      >
        <path
          d="M7 6.5a.43.43 0 0 1-.12.3l-5.604 6.07a.367.367 0 0 1-.277.13.367.367 0 0 1-.277-.13l-.601-.652a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3L4.848 6.5.12 1.381a.43.43 0 0 1-.121-.3.43.43 0 0 1 .12-.3l.602-.65A.368.368 0 0 1 .999 0c.104 0 .196.044.277.13L6.879 6.2A.43.43 0 0 1 7 6.5z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgTick-root"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.804 9.76L7.085 11 12 6.24 10.72 5 7.085 8.52 5.28 6.771 4 8.012z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiStepLabel-label StepLabel-hidden MuiStepLabel-completed"
            >
              <span
                class="StepLabel-label"
              >
                Step 4
              </span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
